2016-01-31  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c:
    Feature requests: "#64 Better error handling"

2016-01-22  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/testsuite/gpasm.project/asmfiles/eeprom-16f887.asm,
    gpasm/testsuite/gpasm.project/asmfiles/eeprom-16f1937.asm,
    gpasm/testsuite/gpasm.project/asmfiles/eeprom-18f4520.asm,
    gpasm/testsuite/gpasm.project/hexfiles/eeprom-16f887.hex,
    gpasm/testsuite/gpasm.project/hexfiles/eeprom-16f1937.hex,
    gpasm/testsuite/gpasm.project/hexfiles/eeprom-18f4520.hex,
    gpasm/testsuite/gpasm.project/lstfiles/eeprom-16f887.lst,
    gpasm/testsuite/gpasm.project/lstfiles/eeprom-16f1937.lst,
    gpasm/testsuite/gpasm.project/lstfiles/eeprom-18f4520.lst,
    libgputils/gpprocessor.c:
    Fixed bug: "#287 de directive uses 2 addresses per item for 16f1937"

  * configure.ac, configure:
    Small development.

  * gpasm/gpasm.c, gpasm/parse.y:
    Code cosmetic.

2016-01-17  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, libgputils/gpcfg-table.c, libgputils/gpprocessor.c,
    libgputils/gpreg-table.c, header/*, lkr/*:
    Updated with new devices based on the mplabx-3.20.

2016-01-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f18855.inc, header/p16f18875.inc 
    Added the missing DEBUG config option to these MCUs.

2016-01-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gpasm.h.in, gpasm/gperror.c,
    gpasm/gperror.h, libgputils/gpopcode.c, libgputils/gpopcode.h:
    Patch 2: #65 Smarter message 302
    Tanks to Petr Mikse.

2016-01-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.h.in,
    gpasm/gperror.c, gpasm/gperror.h, gpasm/util.c:
    Extension of ERROR and MESSG: These directives - inside of
    the parameter string - recognize and execute the #v() macro.

  * gpasm/ppscan.l, gpasm/preprocess.c: