@@ -394,9 +394,8 @@ int gpasm_magic(const char *);
 const char *convert_escape_chars(const char *ps, int *value);
 char *convert_escaped_char(char *str, char c);
 void coerce_str1(struct pnode *exp);
-gpasmVal do_or_append_insn(char *op, struct pnode *parms);
-void set_global(const char *name, gpasmVal value,
-                enum globalLife lifetime, enum gpasmValTypes type);
+gpasmVal do_or_append_insn(const char *op, struct pnode *parms);
+void set_global(const char *name, gpasmVal value, enum globalLife lifetime, enum gpasmValTypes type);
 void purge_temp_symbols(struct symbol_table *table);
 void select_errorlevel(int level);
 void select_strictlevel(int level);
