@@ -22,7 +22,7 @@ Boston, MA 02111-1307, USA.  */
 #ifndef __MACRO_H__
 #define __MACRO_H__
 
-void setup_macro(struct macro_head *h, int arity, struct pnode *parms);
+void setup_macro(struct macro_head *h, int arity, const struct pnode *parms);
 struct symbol_table *push_macro_symbol_table(struct symbol_table *table);
 void list_macro(struct macro_body *p);
 
